2008-04-29  Nick Roberts  <nickrob@snap.net.nz>

	* progmodes/gdb-ui.el (gdb-display-buffer): Don't pop up GUD buffer.
	Always split windows.
	(gdb-speedbar-timer-fn): Only raise frame after user input.
	(gdb-same-frame): Reverse initial value.
	(gdb-display-gdb-buffer): Check for GUD buffer in other frames.

	* progmodes/gud.el (gud-speedbar-buttons): Raise frame in 
	gdb-speedbar-timer-fn.

2008-04-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* uniquify.el (uniquify-rationalize-a-list): Beware of side-effects.

2008-04-29  Daiki Ueno  <ueno@unixuser.org>

	* epa.el (epa-key-list-mode-map): Add menu.
	(epa-delete-keys, epa-import-keys): Fix typo.

2008-04-29  Glenn Morris  <rgm@gnu.org>

	* find-cmd.el (top-level): Does not need cl when compiling.

2008-04-29  Phil Jackson  <phil@shellarchive.co.uk>

	* find-cmd.el: New file.

2008-04-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (completion-hilit-commonality): Remove leftover code.
	(completion-pcm--pattern->regex): Let `group' be a list of symbols.
	(completion-pcm--hilit-commonality): New function.
	(completion-pcm-all-completions): Use it.

	* minibuffer.el (completion-common-substring): Mark obsolete.
	(completions-first-difference, completions-common-part):
	Move from simple.el.
	(completion-hilit-commonality): New fun.
	(display-completion-list, completion-emacs21-all-completions)
	(completion-emacs22-all-completions): Use it.
	* simple.el (completions-first-difference, completions-common-part):
	Move to minibuffer.el.
	(choose-completion-string): Use field functions and minibufferp.
	(completion-setup-function): Don't set completions faces.

2008-04-29  Glenn Morris  <rgm@gnu.org>

	* calendar/calendar.el (calendar-nth-named-absday)
	(calendar-nth-named-day):
	* calendar/diary-lib.el (diary-list-sexp-entries, diary-float):
	* calendar/holidays.el (holiday-float): Doc fixes.

	* emacs-lisp/check-declare.el (check-declare-errmsg): Fix counting in
	the `full' case.
