@@ -1,3 +1,8 @@
+2008-04-29  Sam Steingold  <sds@gnu.org>
+
+	* vc.el (vc-dir-mode-hook): Add normal hook.
+	(vc-dir-mode): Run it.
+
 2008-04-29  Nick Roberts  <nickrob@snap.net.nz>
 
 	* progmodes/gdb-ui.el (gdb-display-buffer): Don't pop up GUD buffer.
@@ -6,7 +11,7 @@
 	(gdb-same-frame): Reverse initial value.
 	(gdb-display-gdb-buffer): Check for GUD buffer in other frames.
 
-	* progmodes/gud.el (gud-speedbar-buttons): Raise frame in 
+	* progmodes/gud.el (gud-speedbar-buttons): Raise frame in
 	gdb-speedbar-timer-fn.
 
 2008-04-29  Stefan Monnier  <monnier@iro.umontreal.ca>
